--- a/MauiApp1/MauiApp1.csproj
+++ b/MauiApp1/MauiApp1.csproj
@@ -60,9 +60,11 @@
 	  <None Remove="Resources\Images\logout.png" />
 	  <None Remove="Resources\Images\market.png" />
 	  <None Remove="Resources\Images\profile.png" />
+	  <None Remove="Resources\Images\star.png" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
 		<PackageReference Include="CommunityToolkit.Maui" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.21" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.21" />
