--- a/MauiApp1/Platforms/Android/AndroidManifest.xml
+++ b/MauiApp1/Platforms/Android/AndroidManifest.xml
@@ -6,5 +6,8 @@
 	<uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+	<uses-permission android:name="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" />
+	<uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 	<uses-sdk />
 </manifest>
